--- a/4hw.ipynb
+++ b/4hw.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,104 +313,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7ca3ea6e4c84d81a935e6b84492cd2e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "config.json:   0%|          | 0.00/1.05k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7ec46a5b5fc34579afbba56ab8c03d92",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "model.safetensors:   0%|          | 0.00/990M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f7f3a0ef65b453fb8d3c5b05c7111bb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/2.36k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11f42688218746f980d37ddf4341e8a8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "spiece.model:   0%|          | 0.00/792k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d02c115711d465fbfbc4acc52366c14",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json:   0%|          | 0.00/2.42M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4255a43766ca4405a86f57cb9a95bee8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "special_tokens_map.json:   0%|          | 0.00/2.20k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "04/17/2024 12:59:43 INFO Loaded model pszemraj/long-t5-tglobal-base-16384-book-summary to cpu\n"
+      "04/18/2024 02:03:36 INFO Loaded model pszemraj/long-t5-tglobal-base-16384-book-summary to cpu\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a52b2aa95795438ea288617b63cd7d9c",
+       "model_id": "9614822309a34926a3558e67be7b8d26",
        "version_major": 2,
        "version_minor": 0
       },
@@ -460,8 +376,8 @@
     "summary = \". \".join(summary_sentences)\n",
     "\n",
     "# 生成摘要\n",
-    "out_str = summarizer(summary)\n",
-    "print(f\"summary: {out_str}\")"
+    "result_text = summarizer(summary)\n",
+    "print(f\"summary: {result_text}\")"
    ]
   },
   {
@@ -476,73 +392,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "**################################**\n",
+       "**Audio to Text & Generate Summary**\n",
+       "**################################**"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a5a6a8b5855b464a843e1cfc590e0d0d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Button(description='Upload Audio File', style=ButtonStyle()), Button(description='Load Audio Fi…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8b5fe60da2224980b6e90c6946e1a02c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Textarea(value='', layout=Layout(height='100px', width='80%'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2e71b746241342e7829895de8d6112f1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Generate Summary', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fb719b9d85424df6b8c0823841b4ff60",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Textarea(value='', layout=Layout(height='100px', width='80%'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "import tkinter as tk\n",
-    "from tkinter import filedialog, Text\n",
+    "from IPython.display import display, Markdown\n",
+    "\n",
+    "# 將標題放入粗體且放大的方框中\n",
+    "title = \"Audio to Text & Generate Summary\"\n",
+    "boxed_title = f\"**{'#' * len(title)}**\\n**{title}**\\n**{'#' * len(title)}**\"\n",
+    "\n",
+    "# 顯示方框中的標題\n",
+    "display(Markdown(boxed_title))\n",
+    "\n",
+    "# 其他程式碼\n",
+    "from IPython.display import display, HTML\n",
+    "import ipywidgets as widgets\n",
     "import speech_recognition as sr\n",
     "from summarizer import Summarizer\n",
     "\n",
-    "def browse_file():\n",
-    "    # 打開文件對話框，讓用戶選擇要上傳的音頻文件\n",
-    "    file_path = filedialog.askopenfilename(filetypes=[(\"Audio files\", \"*.wav;*.mp3\")])\n",
-    "    if file_path:\n",
-    "        # 使用 SpeechRecognition 進行語音識別\n",
-    "        recognizer = sr.Recognizer()\n",
-    "        with sr.AudioFile(file_path) as source:\n",
-    "            audio_data = recognizer.record(source)\n",
-    "            text = recognizer.recognize_google(audio_data, language=\"en-US\")\n",
-    "        \n",
-    "        # 將識別的文本顯示在輸入文本框中\n",
-    "        output_text.delete(\"1.0\", tk.END)\n",
-    "        output_text.insert(tk.END, text)\n",
+    "uploader = None\n",
+    "output_text = None\n",
+    "result_text = None\n",
     "\n",
-    "def generate_summary():\n",
-    "    # 讀取輸入的文本\n",
-    "    text = output_text.get(\"1.0\", tk.END)\n",
+    "def browse_file(b):\n",
+    "    global uploader\n",
+    "    uploader = widgets.FileUpload(accept='.wav,.mp3', multiple=False)\n",
+    "    display(uploader)\n",
+    "\n",
+    "def load_file(b):\n",
+    "    global output_text\n",
     "    \n",
-    "    # 創建 Summarizer 實例\n",
-    "    summarizer = Summarizer()\n",
+    "    # 檢查是否有上傳文件\n",
+    "    if uploader is None or len(uploader.value) == 0:\n",
+    "        print(\"Please upload an audio file first.\")\n",
+    "        return\n",
+    "    \n",
+    "    # Print the uploader value to understand its structure\n",
+    "    print(uploader)\n",
+    "    \n",
+    "    # 讀取上傳的音頻文件\n",
+    "    file_content = next(iter(uploader.value.values()))['content']\n",
+    "    \n",
+    "    # 使用 SpeechRecognition 進行語音識別\n",
+    "    recognizer = sr.Recognizer()\n",
+    "    with sr.AudioFile(file_content) as source:\n",
+    "        audio_data = recognizer.record(source)\n",
+    "        text = recognizer.recognize_google(audio_data, language=\"en-US\")\n",
+    "    \n",
+    "    # 將識別的文本顯示在輸入文本框中\n",
+    "    output_text.value = text\n",
+    "\n",
+    "def generate_summary(b):\n",
+    "    global uploader, output_text, result_text\n",
+    "    \n",
+    "    # 檢查是否有上傳文件\n",
+    "    if uploader is None or len(uploader.value) == 0:\n",
+    "        print(\"Please upload an audio file first.\")\n",
+    "        return\n",
+    "    \n",
+    "    # Print the uploader value to understand its structure\n",
+    "    print(uploader)\n",
+    "    \n",
+    "    # 讀取上傳的音頻文件\n",
+    "    file_content = next(iter(uploader.value.values()))['content']\n",
+    "    \n",
+    "    # 使用 SpeechRecognition 進行語音識別\n",
+    "    recognizer = sr.Recognizer()\n",
+    "    with sr.AudioFile(file_content) as source:\n",
+    "        audio_data = recognizer.record(source)\n",
+    "        text = recognizer.recognize_google(audio_data, language=\"en-US\")\n",
+    "    \n",
+    "    # 將識別的文本顯示在輸入文本框中\n",
+    "    output_text.value = text\n",
     "    \n",
     "    # 生成摘要\n",
+    "    summarizer = Summarizer()\n",
     "    summary = summarizer(text, min_length=50, max_length=200)\n",
     "    \n",
     "    # 將摘要顯示在結果文本框中\n",
-    "    result_text.config(state=tk.NORMAL)\n",
-    "    result_text.delete(\"1.0\", tk.END)\n",
-    "    result_text.insert(tk.END, summary)\n",
-    "    result_text.config(state=tk.DISABLED)  # 禁用文本框的編輯功能\n",
-    "\n",
-    "# 創建主視窗\n",
-    "root = tk.Tk()\n",
-    "root.title(\"Audio to Text & Generate Summary\")\n",
-    "\n",
-    "# 標題\n",
-    "title_label = tk.Label(root, text=\"Audio to Text & Generate Summary\", font=(\"Arial\", 25))\n",
-    "title_label.pack(pady=10)\n",
+    "    result_text.value = summary\n",
     "\n",
     "# 上傳按鈕\n",
-    "upload_button = tk.Button(root, text=\"Upload Audio File\", command=browse_file)\n",
-    "upload_button.pack(pady=10)\n",
+    "upload_button = widgets.Button(description=\"Upload Audio File\")\n",
+    "upload_button.on_click(browse_file)\n",
+    "\n",
+    "# 讀取文件按鈕\n",
+    "load_button = widgets.Button(description=\"Load Audio File\")\n",
+    "load_button.on_click(load_file)\n",
+    "\n",
+    "# 按鈕布局\n",
+    "button_layout = widgets.HBox([upload_button, load_button])\n",
+    "display(button_layout)\n",
     "\n",
     "# 輸出文本框\n",
-    "output_text = Text(root, width=60, height=15, wrap=tk.WORD)\n",
-    "output_text.pack(padx=10, pady=5)\n",
+    "output_text = widgets.Textarea(layout={'width': '80%', 'height': '100px'})\n",
+    "display(output_text)\n",
     "\n",
     "# 生成摘要按鈕\n",
-    "generate_button = tk.Button(root, text=\"Generate Summary\", command=generate_summary)\n",
-    "generate_button.pack(pady=5)\n",
+    "generate_button = widgets.Button(description=\"Generate Summary\")\n",
+    "generate_button.on_click(generate_summary)\n",
+    "display(generate_button)\n",
     "\n",
     "# 結果文本框\n",
-    "result_text = Text(root, width=60, height=15, wrap=tk.WORD, state=tk.DISABLED)\n",
-    "result_text.pack(padx=10, pady=5)\n",
-    "\n",
-    "# 設置主視窗的大小\n",
-    "root.geometry(\"500x600\")\n",
-    "root.mainloop()\n",
-    "\n"
+    "result_text = widgets.Textarea(layout={'width': '80%', 'height': '100px'})\n",
+    "display(result_text)\n"
    ]
   }
  ],
